<resources>
    <string name="app_name">MySched</string>

    <!-- Login Page Strings -->
    <string name="loginButton">Login</string>
    <string name="loginEmployeeID">Employee ID</string>
    <string name="loginPassword">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="forgotPasswordClick">Click Here</string>

    <!-- Recover Password Strings -->
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="forgotEmployeeID">Employee ID</string>
    <string name="forgotEmployeeIDButton">Fetch Employee ID</string>
    <string name="secuirtyQuestion">Security Questions</string>
    <string name="secuirtyAnswer">Answer</string>
    <string name="secuirtyButton">Submit Answers</string>


    <!-- Schedule Strings -->
    <string name="yourShiftsButtonText">Your Shifts</string>
    <string name="availableShiftsButtonText">Available Shifts</string>
    <string name="employeeAttendance">Attendance</string>

</resources>
